# secure-sim

./: README.md
ObfuscateLib/: CMakeLists.txt  Readme.txt  obfuscatelib.sublime-project  obfuscatelib.sublime-workspace  python_test.py
ObfuscateLib/src/: HashGen.h  decode.cxx  generate.cxx  main.cxx
python/: requirements.txt  setup.py
python/data/: test.txt
python/poc/: agent.py  app.py  commands.py  crypto.py  keystore.py  workflow.py
python/poc/backend/: ecc.py
scripts/sol1/: secure_submit_pbs.sh  secure_submit_slurm.sh
scripts/sol2/: secure_pbs.sh  secure_slurm.sh
solution1/: setup.py
solution1/poc/: commands.py  crypto.py
